tests/diagnostics/catalog/snapshots/ir/IR0047.snap
error[IR0047]: IR_E_MACRO_NOT_FOUND
 --> tests/diagnostics/catalog/sources/ir/IR0047.vit:4:8
  |
4 |   give unresolved_ir_contract;
  |        ^^^^^^^^^^^^^^^^^^^^^^ IR diagnostic anchor
  = note: snapshot covers code, title, span, notes, suggestions, recovery and stable order for IR0047
  = help: keep IR validation diagnostics structured and catalog-backed
